--- a/src/components/Editor/XAxis.css
+++ b/src/components/Editor/XAxis.css
@@ -1,6 +1,9 @@
 .x-axis {
   position: absolute;
   bottom: 0px;
+  box-sizing: border-box;
+  padding-left: var(--track-padding-left, 42px);
+  padding-right: var(--track-padding-right, 20px);
 
   border-top: 1px solid rgba(100, 116, 139, 0.5);
   overflow: hidden;
